Fix top margin to be more viewable on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 body {
   text-align: center;
   min-width: 300px;
-  padding-top: 50px;
+  padding-top: 30px;
 }
 
 .container {
